--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: #070610;
+    background-color: #13111A;
 }
 
 header
@@ -12,7 +12,7 @@ header
 header h1
 {
     margin: 5% 0% 0% 10%;
-    color: #F0CE86;
+    color: #F9C871;
 }
 
 .navigation
@@ -24,7 +24,7 @@ header h1
 .navigation a
 {
     cursor: pointer;
-    color: #F0CE86;
+    color: #F9C871;
     text-decoration: none;
 }
 
@@ -38,6 +38,7 @@ img
 {
     width: 50%;
     height: auto;
+    box-shadow: 0 0 30px;
 }
 
 #about h2
@@ -56,6 +57,12 @@ img
     {
         transform: translate(0px,0px);
         margin: 5% 0% 10% 10%;
+    }
+
+    .item
+    {
+        text-align: center;
+        margin: 12% 0;
     }
 
     img
