--- a/index.css
+++ b/index.css
@@ -41,10 +41,45 @@ img
     box-shadow: 0 0 30px;
 }
 
-#about h2
+#about div
 {
     color: #FFFFFF;
+    margin: 5% 10%;
 }
+
+#about h2
+{
+    top: 10%;
+}
+
+#about p
+{
+    font-size: 15px;
+    line-height: 1.6;
+    letter-spacing: .05em;
+}
+
+#about a::before {
+    background-color: #eee;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    color: #333;
+    display: inline-block;
+    font-family: FontAwesome;
+    font-size: 16px;
+    height: 44px; /* Button height */
+    line-height: 44px; /* Button height */
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    text-align: center;
+    width: 44px; /* Button width */
+}
+#about a:hover::before {
+    color: #fff;
+}
+
+#about a[href*="twitter.com"]::before        { content: "\f099"; }
+#about a[href*="twitter.com"]:hover::before  { background-color: #55acee; }
 
 @media (max-width: 767px)
 {
@@ -69,5 +104,18 @@ img
     {
         width: 80%;
         height: auto;
+    }
+
+    #about div
+    {
+        color: #FFFFFF;
+        margin: 20% 10%;
+    }
+
+    #about a::before
+    {
+        height: 35px; /* Button height */
+        line-height: 35px; /* Button height */
+        width: 35px; /* Button width */
     }
 }
